# rust-against-humanity

./: Cargo.toml  README.md
assets/: answers.ron  prompts.ron
back/: Cargo.toml
back/src/: deck.rs  main.rs  util.rs
front/: Cargo.toml  package-lock.json  package.json  webpack.config.js
front/src/: answer_selector.rs  cards.rs  judgement.rs  lib.rs  login.rs  notification.rs  round.rs  util.rs  websocket.rs
front/static/: index.html  style.css
schema/: Cargo.toml
schema/src/: lib.rs
