[package]
name = "back"
version = "0.1.0"
authors = ["Xavier Lambein <xlambein@gmail.com>"]
edition = "2018"

[dependencies]
schema = { path = "../schema" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6"
rand = "0.7"
anyhow = "1.0"

# [target.x86_64-unknown-linux-gnu]
# linker = "lld"
