[package]
name = "front"
version = "0.1.0"
authors = ["Xavier Lambein <xlambein@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
schema = { path = "../schema" }
anyhow = "*"
yew = "0.17"
wasm-bindgen = "0.2.67"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
